manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  labels:
    app: restaurant
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
      - name: restaurant
        image: drchung5/restaurant-app
        ports:
        - containerPort: 8000
