manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant
  ports:
    - protocol: TCP
      port: 8000
